# document-chatbot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 750061fde877_add_users_table.py  8e390a0e1449_chatsession_user_relationship.py  ab2139727011_createdat_column_in_chat_sessions_and_.py  d1e7b4847d44_added_chatbot_session_and_prompt_tables.py
backend/backend/api/: api.py  deps.py
backend/backend/api/endpoints/: auth.py  chat_sessions.py  users.py
backend/backend/config/: settings.py
backend/backend/core/: settings.py
backend/backend/crud/: __init__.py  base.py  chat_prompt.py  chat_session.py  crud_chat_prompt.py  crud_chat_session.py  crud_user.py
backend/backend/db/: alembic_base.py  database.py
backend/backend/models/: __init__.py  chat_prompt.py  chat_session.py  mixins.py  user.py
backend/backend/schemas/: __init__.py  api_responses.py  basic.py  chat_prompt.py  chat_session.py  token.py  user.py
backend/backend/security/: oauth2_schemes.py  util.py
backend/backend/service/: __init__.py  chat_session_service.py  user_service.py
backend/backend/util/: llms.py
backend/tests/: conftest.py  test_api.py  test_session_service.py  utils.py
frontend/: package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
frontend/src/app/authentication/: authentication.module.ts  authentication.service.ts
frontend/src/app/authentication/interceptors/: auth-interceptor.ts  error-interceptor.ts
frontend/src/app/authentication/login-page/: login-page.component.css  login-page.component.html
frontend/src/app/chat/: chat.module.ts  chat.service.ts
frontend/src/app/models/: chatPrompt.ts  chatSession.ts  chatSessionSimple.ts  sessionPromptingResponse.ts  token.ts  user.ts
frontend/src/environments/: environment.development.ts
(+9 files in other folders)
