[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["KristijanKolev <kikokolev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.0.352"
pypdf = "^3.15.5"
openai = "^0.28.0"
tiktoken = "^0.5.0"
gpt4all = "^v2.0.2"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
pydantic-settings = "^2.0.3"
chromadb = "^0.4.13"
psycopg2 = "^2.9.7"
pytest = "^7.4.2"
httpx = "^0.25.0"
fastapi-sso = "^0.7.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.5"
ipywidgets = "^8.1.1"
unstructured = {extras = ["all"], version = "^0.11.0"}
pdf2image = "^1.16.3"
pdfminer-six = "^20221105"
opencv-python = "^4.8.1.78"
pandas = "^2.1.3"
unstructured-pytesseract = "^0.3.12"
unstructured-inference = "^0.7.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
